--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -32,11 +32,11 @@ jobs:
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_USER }} TO ${{ secrets.DB_USER }};"
           sudo -u postgres psql -c "ALTER SYSTEM SET listen_addresses = '*';"
         env:
-          PGHOST: localhost
-          PGUSER: ${{ secrets.DB_USER }}
-          PGPASSWORD: ${{ secrets.DB_PASSWORD }}
-          PGDATABASE: ${{ secrets.DB_DATABASE }}
-          PGPORT: ${{ secrets.DB_PORT }}
+          DB_HOST: localhost
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_DATABASE: ${{ secrets.DB_DATABASE }}
+          DB_PORT: ${{ secrets.DB_PORT }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -51,9 +51,9 @@ jobs:
 
       - name: Run Tests
         env:
-          PGHOST: localhost
-          PGUSER: ${{ secrets.DB_USER }}
-          PGPASSWORD: ${{ secrets.DB_PASSWORD }}
-          PGDATABASE: ${{ secrets.DB_NAME }}
-          PGPORT: 5432
+          DB_HOST: localhost
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_DATABASE: ${{ secrets.DB_DATABASE }}
+          DB_PORT: 5432
         run: npm test
