--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -26,10 +26,10 @@ jobs:
       # Set up PostgreSQL environment (create user, DB, and configure)
       - name: Setup PostgreSQL Database
         run: |
-          sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_USER }};"
+          sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_DATABASE }};"
           sudo -u postgres psql -c "CREATE USER ${{ secrets.DB_USER }} WITH PASSWORD '${{ secrets.DB_PASSWORD }}';"
           sudo -u postgres psql -c "ALTER USER ${{ secrets.DB_USER }} CREATEDB;"
-          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_USER }} TO ${{ secrets.DB_USER }};"
+          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }};"
           sudo -u postgres psql -c "ALTER SYSTEM SET listen_addresses = '*';"
         env:
           DB_HOST: localhost
