--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,4 +1,4 @@
-name: Integaration Test Workflow
+name: Integration Test Workflow
 
 on:
   push:
@@ -27,14 +27,26 @@ jobs:
       # Set up PostgreSQL environment (create user, DB, and configure)
       - name: Setup PostgreSQL Database
         run: |
-          sudo -u postgres psql -c "CREATE ROLE ${{ secrets.DB_USER }} WITH LOGIN PASSWORD '${{ secrets.DB_PASSWORD }}';"
-          sudo -u postgres psql -c "CREATE USER ${{ secrets.DB_USER }} WITH PASSWORD '${{ secrets.DB_PASSWORD }}';"
-          sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_DATABASE }};"
-          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }}";
-          sudo -u postgres psql -c "ALTER USER ${{ secrets.DB_USER }} WITH SUPERUSER;
-          sudo systemctl restart postgresql
+          # Check if the role exists, create if not
+          sudo -u postgres psql -c "DO \$$
+          BEGIN
+            IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = '${{ secrets.DB_USER }}') THEN
+              CREATE ROLE ${{ secrets.DB_USER }} WITH LOGIN PASSWORD '${{ secrets.DB_PASSWORD }}';
+            END IF;
+          END\$$;"
+          
+          # Check if the database exists, create if not
+          sudo -u postgres psql -c "DO \$$
+          BEGIN
+            IF NOT EXISTS (SELECT FROM pg_database WHERE datname = '${{ secrets.DB_DATABASE }}') THEN
+              CREATE DATABASE ${{ secrets.DB_DATABASE }};
+            END IF;
+          END\$$;"
+          
+          # Grant privileges
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }};"
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON SCHEMA public TO ${{ secrets.DB_USER }};"
+          sudo -u postgres psql -c "ALTER USER ${{ secrets.DB_USER }} WITH SUPERUSER;"
         env:
           DB_HOST: localhost
           DB_USER: ${{ secrets.DB_USER }}
