--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -35,13 +35,10 @@ jobs:
             END IF;
           END\$$;"
           
-          # Check if the database exists, create if not
-          sudo -u postgres psql -c "DO \$$
-          BEGIN
-            IF NOT EXISTS (SELECT FROM pg_database WHERE datname = '${{ secrets.DB_DATABASE }}') THEN
-              CREATE DATABASE ${{ secrets.DB_DATABASE }};
-            END IF;
-          END\$$;"
+          # Check if the database exists and create it if it doesn't exist
+          if ! sudo -u postgres psql -lqt | cut -d \| -f 1 | grep -qw ${{ secrets.DB_DATABASE }}; then
+            sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_DATABASE }};"
+          fi
           
           # Grant privileges
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }};"
