--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -27,14 +27,21 @@ jobs:
       # Destroy all databases and users, except for defaults (postgres, template0, template1)
       - name: Drop all databases and users (except default ones)
         run: |
-          sudo -u postgres psql -c "SELECT 'DROP DATABASE ' || datname || ';' FROM pg_database WHERE datname NOT IN ('postgres', 'template0', 'template1')" | sudo -u postgres psql
-          sudo -u postgres psql -c "SELECT 'DROP ROLE ' || rolname || ';' FROM pg_roles WHERE rolname NOT IN ('postgres', 'pg_signal_backend', 'pg_read_all_settings', 'pg_read_all_stats', 'pg_stat_scan_tables', 'pg_monitor')" | sudo -u postgres psql
-        shell: /bin/bash
+          sudo -u postgres psql -c "DO $$ BEGIN
+            EXECUTE 'DROP DATABASE IF EXISTS ' || datname || ';'
+            FROM pg_database
+            WHERE datname NOT IN ('postgres', 'template0', 'template1');
+          END $$;"
+          sudo -u postgres psql -c "DO $$ BEGIN
+            EXECUTE 'DROP ROLE IF EXISTS ' || rolname || ';'
+            FROM pg_roles
+            WHERE rolname NOT IN ('postgres', 'pg_signal_backend', 'pg_read_all_settings', 'pg_read_all_stats', 'pg_stat_scan_tables', 'pg_monitor');
+          END $$;"
+        shell: bash
 
       # Recreate PostgreSQL environment (create user, DB, and configure)
       - name: Setup PostgreSQL Database
         run: |
-          # Create user and database for the application
           sudo -u postgres psql -c "CREATE ROLE ${{ secrets.DB_USER }} WITH LOGIN PASSWORD '${{ secrets.DB_PASSWORD }}';"
           sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_DATABASE }};"
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }};"
