--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -17,48 +17,6 @@ jobs:
       - name: Checkout our code
         uses: actions/checkout@v3
 
-      # Uninstall PostgreSQL completely
-      - name: Uninstall PostgreSQL
-        run: |
-          sudo systemctl stop postgresql
-          sudo apt-get --purge remove postgresql postgresql-client postgresql-client-common postgresql-common -y
-          sudo apt-get autoremove -y
-          sudo apt-get autoclean -y
-          sudo rm -rf /var/lib/postgresql/
-          sudo rm -rf /etc/postgresql/
-          sudo rm -rf /etc/postgresql-common/
-          sudo rm -rf /var/log/postgresql/
-          sudo deluser postgres
-        shell: bash
-
-      # Reinstall PostgreSQL
-      - name: Reinstall PostgreSQL
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install postgresql postgresql-contrib -y
-          sudo systemctl start postgresql
-          sudo systemctl enable postgresql
-          sudo psql --version
-        shell: bash
-
-      # Recreate PostgreSQL environment (create user, DB, and configure)
-      - name: Setup PostgreSQL Database
-        run: |
-          sudo -u postgres psql -c "CREATE ROLE ${{ secrets.DB_USER }} WITH LOGIN PASSWORD '${{ secrets.DB_PASSWORD }}';"
-          sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_DATABASE }};"
-          sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }};"
-          sudo -u postgres psql -c "ALTER ROLE ${{ secrets.DB_USER }} WITH SUPERUSER;"
-        env:
-          DB_HOST: localhost
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_DATABASE: ${{ secrets.DB_DATABASE }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-
-      # Restart PostgreSQL to apply changes
-      - name: Restart PostgreSQL service
-        run: sudo systemctl restart postgresql
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -74,4 +32,5 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_DATABASE: ${{ secrets.DB_DATABASE }}
           DB_PORT: 5432
+          PORT: 3000
         run: npm test
