--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -44,6 +44,9 @@ jobs:
       # Recreate PostgreSQL environment (create user, DB, and configure)
       - name: Setup PostgreSQL Database
         run: |
+          # Drop the database if it exists, then recreate it
+          sudo -u postgres psql -c "DROP DATABASE IF EXISTS ${{ secrets.DB_DATABASE }};"
+          sudo -u postgres psql -c "DROP ROLE IF EXISTS ${{ secrets.DB_USER }};"
           sudo -u postgres psql -c "CREATE ROLE ${{ secrets.DB_USER }} WITH LOGIN PASSWORD '${{ secrets.DB_PASSWORD }}';"
           sudo -u postgres psql -c "CREATE DATABASE ${{ secrets.DB_DATABASE }};"
           sudo -u postgres psql -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_DATABASE }} TO ${{ secrets.DB_USER }};"
