--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,9 +1,6 @@
 name: Integration Test Workflow
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -40,7 +37,6 @@ jobs:
           sudo psql --version
 
       # Recreate PostgreSQL environment (create user, DB, and configure)
-     # Recreate PostgreSQL environment (create user, DB, and configure)
       - name: Setup PostgreSQL Database
         run: |
           sudo -u postgres psql -c "DROP DATABASE IF EXISTS ${{ secrets.DB_DATABASE }};"
@@ -61,12 +57,27 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-      
+
+      # Reset PostgreSQL Schema and ensure no leftover types or constraints remain
       - name: Reset PostgreSQL Schema
         run: |
           sudo -u postgres psql -c "DROP SCHEMA public CASCADE;"
           sudo -u postgres psql -c "CREATE SCHEMA public;"
-      
+          sudo -u postgres psql -c "DO $$ DECLARE
+              r RECORD;
+            BEGIN
+              FOR r IN (SELECT typname, nspname FROM pg_type
+                        JOIN pg_namespace ON pg_type.typnamespace = pg_namespace.oid
+                        WHERE nspname = 'public') LOOP
+                  EXECUTE 'DROP TYPE IF EXISTS ' || quote_ident(r.nspname) || '.' || quote_ident(r.typname) || ' CASCADE';
+              END LOOP;
+            END $$;"
+
+      # Run Sequelize migrations or schema sync (if applicable)
+      - name: Run Sequelize Migrations
+        run: npx sequelize-cli db:migrate
+
+      # Run Tests
       - name: Run Tests
         env:
           DB_HOST: localhost
