--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,6 +1,9 @@
 name: Integration Test Workflow
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -12,6 +15,8 @@ jobs:
 
     steps:
       - name: Checkout our code
+        env:
+          ACTIONS_RUNNER_DEBUG: true
         uses: actions/checkout@v3
 
       # Uninstall PostgreSQL completely (optional)
