--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -68,13 +68,16 @@ jobs:
         run: |
           sudo -u postgres psql -c "DROP SCHEMA public CASCADE;"
           sudo -u postgres psql -c "CREATE SCHEMA public;"
-          sudo -u postgres psql -c "DO $$ DECLARE
+          sudo -u postgres psql -c "DO $$ 
+            DECLARE
               r RECORD;
             BEGIN
-              FOR r IN (SELECT typname, nspname FROM pg_type
+              FOR r IN (SELECT typname, nspname 
+                        FROM pg_type
                         JOIN pg_namespace ON pg_type.typnamespace = pg_namespace.oid
-                        WHERE nspname = 'public') LOOP
-                  EXECUTE 'DROP TYPE IF EXISTS ' || quote_ident(r.nspname) || '.' || quote_ident(r.typname) || ' CASCADE';
+                        WHERE nspname = 'public') 
+              LOOP
+                EXECUTE 'DROP TYPE IF EXISTS ' || quote_ident(r.nspname) || '.' || quote_ident(r.typname) || ' CASCADE';
               END LOOP;
             END $$;"
 
