--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -33,6 +33,10 @@ jobs:
     - name: Set up Packer
       uses: hashicorp/setup-packer@v2
 
+    - name: Initialize Packer
+      run: |
+        packer init packer/aws.pkr.hcl
+
     - name: Build Artifact
       run: |
         npm install
