--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -5,6 +5,19 @@ on:
     branches:
       - main
 
+env:
+  PKR_VAR_ami_name: ${{ secrets.AMI_NAME }}
+  PKR_VAR_ami_regions: ${{ secrets.AMI_REGIONS }}
+  PKR_VAR_ami_description: ${{ secrets.AMI_DESCRIPTION }}
+  PKR_VAR_source_ami: ${{ secrets.SOURCE_AMI }}
+  PKR_VAR_instance_type: ${{ secrets.INSTANCE_TYPE }}
+  PKR_VAR_ssh_username: ${{ secrets.SSH_USERNAME }}
+  PKR_VAR_subnet_id: ${{ secrets.SUBNET_ID }}
+  PKR_VAR_region: ${{ secrets.REGION }}
+  PKR_VAR_db_user: ${{ secrets.DB_USER }}
+  PKR_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+  PKR_VAR_db_name: ${{ secrets.DB_NAME }}
+      
 jobs:
   build:
     name: Packer Build Image
@@ -37,10 +50,10 @@ jobs:
       run: |
         packer init packer/aws.pkr.hcl
 
-    - name: Build Artifact
-      run: |
-        npm install
-        npm run build
+    # - name: Build Artifact
+    #   run: |
+    #     npm install
+    #     npm run build
 
     - name: Build Packer Image
       run: |
