--- a/.github/workflows/packer-ci.yml
+++ b/.github/workflows/packer-ci.yml
@@ -15,7 +15,7 @@ env:
   PKR_VAR_region: ${{ secrets.REGION }}
   PKR_VAR_db_user: ${{ secrets.DB_USER }}
   PKR_VAR_db_password: ${{ secrets.DB_PASSWORD }}
-  PKR_VAR_db_name: ${{ secrets.DB_NAME }}
+  PKR_VAR_db_name: ${{ secrets.DB_DATABASE }}
         
 jobs:
   build:
