--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -19,7 +19,9 @@ env:
   PKR_VAR_db_name: ${{ secrets.DB_DATABASE }}
   PKR_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   PKR_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}     
 jobs:
   build:
     name: Packer Build Image
@@ -46,9 +48,10 @@ jobs:
         unzip awscliv2.zip
         sudo ./aws/install --update   # Add the --update flag to update the existing CLI
         aws --version  # Check the updated version
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws configure set region ${{ secrets.REGION }}
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} --profile dev
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} --profile dev
+        aws configure set region ${{ secrets.REGION }} --profile dev
+        aws configure list --profile dev
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -63,6 +66,9 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
         export AWS_DEFAULT_REGION=${{ secrets.REGION }}
+        echo $AWS_ACCESS_KEY_ID
+        echo $AWS_SECRET_ACCESS_KEY
+        echo $AWS_DEFAULT_REGION
         echo "AWS credentials exported successfully."
 
     - name: Set up Packer
