--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -21,7 +21,7 @@ env:
   PKR_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}     
+  AWS_DEFAULT_REGION: ${{ secrets.REGION }}     
 jobs:
   build:
     name: Packer Build Image
