added script to get env

--- a/packer/scripts/mywebapp.service
+++ b/packer/scripts/mywebapp.service
@@ -9,7 +9,7 @@ User=csye6225
 Group=csye6225
 WorkingDirectory=/opt/webapp
 ExecStartPre=/usr/bin/npm install
-ExecStart=/usr/bin/ts-node /opt/webapp/src/index.ts
+ExecStart=/usr/bin/npm start
 Restart=on-failure
 RestartSec=3
 StandardOutput=syslog
