--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Zip folder
-      run: zip -r webapp.zip . -x "*.git*" "node_modules/*" "packer/aws.auto.pkrvars.hcl"
+      run: zip -r webapp.zip . -x "*.git*" "node_modules/*" "scripts/aws.auto.pkrvars.hcl"
     
     - name: Update AWS CLI to the latest version
       run: |
@@ -72,7 +72,7 @@ jobs:
 
     - name: Initialize Packer
       run: |
-        packer init packer/aws.pkr.hcl
+        packer init aws.pkr.hcl
 
     - name: Build Packer Image
       env:
@@ -80,4 +80,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       run: |
-        packer build packer/aws.pkr.hcl
+        packer build aws.pkr.hcl
