--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -61,18 +61,13 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
         export AWS_DEFAULT_REGION=${{ secrets.REGION }}
-        echo $AWS_ACCESS_KEY_ID
-        echo $AWS_SECRET_ACCESS_KEY
-        echo $AWS_DEFAULT_REGION
-        export AWS_PROFILE=dev
-        echo $AWS_PROFILE
 
     - name: Set up Packer
       uses: hashicorp/setup-packer@v2
 
     - name: Initialize Packer
       run: |
-        packer init aws.pkr.hcl
+        packer init .
 
     - name: Build Packer Image
       env:
@@ -80,4 +75,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       run: |
-        packer build aws.pkr.hcl
+        packer build .
